added put targeting
